--- a/CCIP/CCIP/StaffCell.xib
+++ b/CCIP/CCIP/StaffCell.xib
@@ -8,36 +8,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="StaffCell" id="gJj-kL-uIn" customClass="StaffCell">
-            <rect key="frame" x="0.0" y="0.0" width="138" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="160" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="138" height="180"/>
+                <rect key="frame" x="0.0" y="0.0" width="160" height="180"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="StaffIconDefault.png" translatesAutoresizingMaskIntoConstraints="NO" id="F3y-GP-5oQ">
-                        <rect key="frame" x="37" y="8" width="64" height="64"/>
+                        <rect key="frame" x="48" y="10" width="64" height="64"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="64" id="UOY-9z-ZXg"/>
                             <constraint firstAttribute="width" constant="64" id="b3j-FI-SsG"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
-                        <rect key="frame" x="2" y="74" width="134" height="53"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSp-Vx-Idi">
+                        <rect key="frame" x="13" y="76" width="134" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="54" id="h9Y-sh-kOJ"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="60" id="h9Y-sh-kOJ"/>
                             <constraint firstAttribute="width" constant="134" id="oQr-IX-3fF"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                        <fontDescription key="fontDescription" name="PingFangTC-Semibold" family="PingFang TC" pointSize="20"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="行政組員兼場務組攤位組員" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
-                        <rect key="frame" x="2" y="129" width="134" height="42"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="行政組員兼場務組攤位組員" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtx-ch-J8c">
+                        <rect key="frame" x="13" y="106" width="134" height="50.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="134" id="dmZ-JN-de6"/>
-                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="42" id="jG0-Iz-5de"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="54" id="jG0-Iz-5de"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                        <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="18"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -49,7 +49,7 @@
                 <constraint firstItem="dtx-ch-J8c" firstAttribute="top" secondItem="zSp-Vx-Idi" secondAttribute="bottom" constant="2" id="DDT-sA-xYd"/>
                 <constraint firstItem="dtx-ch-J8c" firstAttribute="top" secondItem="zSp-Vx-Idi" secondAttribute="bottom" constant="2" id="Ogg-iJ-m7M"/>
                 <constraint firstItem="zSp-Vx-Idi" firstAttribute="centerX" secondItem="gJj-kL-uIn" secondAttribute="centerX" id="QVy-O6-MlI"/>
-                <constraint firstItem="F3y-GP-5oQ" firstAttribute="top" secondItem="gJj-kL-uIn" secondAttribute="top" constant="8" id="YfO-TO-lSJ"/>
+                <constraint firstItem="F3y-GP-5oQ" firstAttribute="top" secondItem="gJj-kL-uIn" secondAttribute="top" constant="10" id="YfO-TO-lSJ"/>
                 <constraint firstItem="zSp-Vx-Idi" firstAttribute="top" secondItem="F3y-GP-5oQ" secondAttribute="bottom" constant="2" id="wt4-98-byZ"/>
                 <constraint firstItem="F3y-GP-5oQ" firstAttribute="centerX" secondItem="gJj-kL-uIn" secondAttribute="centerX" id="zgc-cc-lDg"/>
             </constraints>
